# Citations

./: .editorconfig  .gitattributes  .gitignore  README.md  copilot-instructions.md  pyproject.toml  requirements.txt
Documentation/: citations.md  cli_usage.md  idea.md  vscode_extension_plan.md
Documentation/issues/: implementation_plan_issues.md
src/: __main__.py  citation_extractor.py  citation_generator.py  citation_generator.py.bak
tests/: test_citations.py  test_cli.py
vscode-extension/: package.json
vscode-extension/src/: extension.ts
